// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page Component routes Forgot Password link to PasswordReset component 1`] = `
Array [
  <header
    className="header"
  >
    <h1>
      Workout App
    </h1>
    <div
      className="headerButton"
    >
      <a
        className="link"
        href="/login"
        onClick={[Function]}
      >
        <button
          className="mantine-UnstyledButton-root mantine-Button-root button mantine-8nr514"
          data-button={true}
          type="button"
        >
          <div
            className="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              className="mantine-qo1k2 mantine-Button-label"
              style={
                Object {
                  "textTransform": undefined,
                }
              }
            >
              Log in
            </span>
          </div>
        </button>
      </a>
      <a
        className="link"
        href="/register"
        onClick={[Function]}
      >
        <button
          className="button"
          type="button"
        >
          Sign Up
        </button>
      </a>
    </div>
  </header>,
  <form
    className="card undefined"
    onSubmit={[Function]}
  >
    <label>
      Forgot Password?
    </label>
    <input
      className="input"
      onChange={[Function]}
      placeholder="Email Address"
      type="email"
      value=""
    />
    <button
      className="button"
      disabled={true}
      type="submit"
    >
      Submit
    </button>
  </form>,
]
`;

exports[`Login page Component routes Sign up button to Register component 1`] = `
Array [
  <header
    className="header"
  >
    <h1>
      Workout App
    </h1>
    <div
      className="headerButton"
    >
      <a
        className="link"
        href="/login"
        onClick={[Function]}
      >
        <button
          className="mantine-UnstyledButton-root mantine-Button-root button mantine-8nr514"
          data-button={true}
          type="button"
        >
          <div
            className="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              className="mantine-qo1k2 mantine-Button-label"
              style={
                Object {
                  "textTransform": undefined,
                }
              }
            >
              Log in
            </span>
          </div>
        </button>
      </a>
      <a
        className="link"
        href="/register"
        onClick={[Function]}
      >
        <button
          className="button"
          type="button"
        >
          Sign Up
        </button>
      </a>
    </div>
  </header>,
  <form
    className="card undefined"
    onSubmit={[Function]}
  >
    <h2>
      Register
    </h2>
    <div>
      <div
        className="noAlert"
      >
        This Email address already exists
      </div>
      <div
        className="noAlert"
      >
        Please enter a valid Email address
      </div>
      <div
        className="noAlert"
      >
        Password should be at least 6 characters. Please try again
      </div>
      <div
        className="noAlert"
      >
        Please enter a valid password
      </div>
    </div>
    <span>
      invalid name
    </span>
    <input
      className="input invalid"
      onChange={[Function]}
      placeholder="First Name"
      type="firstName"
    />
    <input
      className="input"
      onChange={[Function]}
      placeholder="Last Name"
      type="lastName"
    />
    <input
      className="input false"
      onChange={[Function]}
      placeholder="E-Mail"
      type="email"
    />
    <input
      className="input false"
      onChange={[Function]}
      placeholder="Password"
      type="password"
    />
    <button
      className="button"
      disabled={false}
      type="submit"
    >
      Sign Up
    </button>
    <div
      className="signIn"
    >
      Have an account?
      <a
        className="signInLink"
        href="/login"
        onClick={[Function]}
      >
        Sign in
      </a>
    </div>
  </form>,
]
`;

exports[`Login page Login Page renders correctly 1`] = `
Array [
  <header
    className="header"
  >
    <h1>
      Workout App
    </h1>
    <div
      className="headerButton"
    >
      <a
        className="link"
        href="/login"
        onClick={[Function]}
      >
        <button
          className="mantine-UnstyledButton-root mantine-Button-root button mantine-8nr514"
          data-button={true}
          type="button"
        >
          <div
            className="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              className="mantine-qo1k2 mantine-Button-label"
              style={
                Object {
                  "textTransform": undefined,
                }
              }
            >
              Log in
            </span>
          </div>
        </button>
      </a>
      <a
        className="link"
        href="/register"
        onClick={[Function]}
      >
        <button
          className="button"
          type="button"
        >
          Sign Up
        </button>
      </a>
    </div>
  </header>,
  <form
    className="card undefined"
    onSubmit={[Function]}
  >
    <h2>
      Login
    </h2>
    <input
      className="input"
      onChange={[Function]}
      placeholder="E-mail.com"
      type="email"
      value=""
    />
    <input
      className="input"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <button
      className="button"
      disabled={false}
      type="submit"
    >
      Log In
    </button>
    <div
      className="signingActivity"
    >
      <a
        className="forgotPass"
        href="/forgot-password"
        onClick={[Function]}
      >
        Forgot Password?
      </a>
      <a
        className="signUp"
        href="/register"
        onClick={[Function]}
      >
        Sign up
      </a>
    </div>
  </form>,
]
`;
